--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Computer Science</title>
-    <script src="./mergeSort.js" defer></script>
+    <script src="./hashMap.js" defer></script>
 </head>
 <body>
     
